[gd_scene load_steps=10 format=2]

[ext_resource path="res://UIScenes/NPCChoice.tscn" type="PackedScene" id=1]
[ext_resource path="res://Textures/UI/Logo.png" type="Texture" id=2]
[ext_resource path="res://Textures/Scenes/MainScene.jpg" type="Texture" id=3]
[ext_resource path="res://Scripts/StartMenu.gd" type="Script" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/tahomabd.ttf"

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = SubResource( 1 )

[sub_resource type="Animation" id=4]
resource_name = "FadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("FadeOut:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "FadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("FadeOut:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "SlideIn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Logo:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 272.5, -242.5 ), Vector2( 272.5, 140.5 ), Vector2( 272.5, 119.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Button_GameStart:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 410.5, 700 ), Vector2( 410.5, 372 ), Vector2( 410.5, 396 ) ]
}

[node name="StartMenu" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="BG" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
texture = ExtResource( 3 )

[node name="Logo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -239.5
margin_top = -542.5
margin_right = 239.5
margin_bottom = -127.5
texture = ExtResource( 2 )

[node name="Button_GameStart" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.5
margin_top = 400.0
margin_right = 101.5
margin_bottom = 488.0

[node name="Label" parent="Button_GameStart" index="0"]
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.901961, 0.415686, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 2 )
text = "START"

[node name="FadeOut" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 4 )
anims/FadeOut = SubResource( 3 )

[node name="AnimationPlayer_SlideIn" type="AnimationPlayer" parent="."]
anims/SlideIn = SubResource( 5 )

[connection signal="button_down" from="Button_GameStart" to="." method="_on_Button_GameStart_button_down"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Button_GameStart"]
